# voice-agent-api

./: .env.sample  .gitignore  README.md  pyproject.toml
src/app/: config.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/api/v1/chat/: routes.py  schemas.py
src/app/api/v1/transcribe/: routes.py  schemas.py
src/app/api/v1/tts/: routes.py
src/app/dependencies/: __init__.py  providers.py
