[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Eduard Laskarzhevskyi <laskarzhevskyi.eduard@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.116.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
