[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Eduard Laskarzhevskyi <laskarzhevskyi.eduard@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.23.2"
fastapi-cli = "^0.0.8"
openai = "^1.102.0"
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
